components/header/header.scss
@import "../global/global";

.ring-header {
  box-sizing: border-box;
  margin: 0 0 1px;
  position: relative;

  &:before, &__right:before {
    content: '';
    display: inline-block;
    height: $ring-unit * 7;
    vertical-align: middle;
  }

  &__right {
    float: right;
    margin-right: $ring-unit * 3;
  }

  &.ring-header_border:after {
    border-bottom: solid 1px rgba(0, 0, 0, 0.1);
    bottom: 0;
    content: '';
    left: $ring-unit * 4;
    position: absolute;
    right: $ring-unit * 4;
  }

  .ring-link_active {
    font-weight: normal;
  }

  @include ring-clearfix();
  @include ring-font();
}

.ring-header__logo,
.ring-header__menu {
  display: inline-block;
}

.ring-header__logo {
  margin: 0 $ring-unit * 4;
  @include ring-vertical-compensation(-1px);
}

.ring-header__user-menu {
  display: inline-block;
}

.ring-header__menu-item,
.ring-header__user-menu-item {
  display: inline-block;
  line-height: 1.2;
  margin-right: $ring-unit*2;

  &:last-child {
    margin-right: 0;
  }
}

.ring-header__user-menu-item_icon {
  cursor: pointer;

  .ring-icon {
    fill: $ring-gray-color;
    padding: $ring-unit;
  }

  &:hover {
    .ring-icon {
      fill: $ring-link-hover-color;
    }
  }

  .ring-icon_blue {
    fill: $ring-blue-color;
  }

  .ring-icon_24 {
    $default-size: 18px;
    $avatar-size: $ring-unit*3;

    border-radius: 3px;
    height: $avatar-size;
    // NB! Horizontal compensation of size changing. Margin is used instead of
    // padding because of the border-radius.
    margin: $ring-unit - (($avatar-size - $default-size) / 2);
    overflow: hidden;
    padding: 0;
    width: $avatar-size;
  }
}

.ring-header__user-menu-item_login {
  margin-left: $ring-unit;
}

.ring-header__user-menu-extra {
  margin-right: $ring-unit*3;
}

.ring-header__menu-service {
  background: linear-gradient(#24353d, #4a565c);
  height: 0;
  overflow: hidden;
  position: relative;
  text-align: left;
  width: 100%;

  &.ring-header__menu-service_opened {
    margin-bottom: $ring-unit*2;
  }
}

.ring-header__menu-service-inner {
  bottom: 0;
  line-height: $ring-unit * 17;
  position: absolute;
  text-align: center;
  width: 100%;
}

.ring-header__menu-service-item.ring-link,
.ring-header__menu-service-item.ring-link_active,
.ring-header__menu-service-item.ring-link:visited {
  box-sizing: border-box;
  color: #FFF;
  display: inline-block;
  font-weight: normal;
  height: $ring-unit*16;
  line-height: 1.2;
  overflow-x: hidden;
  text-align: center;
  text-decoration: none;
  text-overflow: ellipsis;
  vertical-align: middle;
  width: $ring-unit*16;
  white-space: nowrap;

  .ring-icon {
    display: inline-block;
    fill: #fff;
    margin-top: 3*$ring-unit;
    padding-bottom: $ring-unit;
  }

  &.ring-link:hover {
    color: $ring-link-hover-color;
    text-decoration: underline;
  }

  &.ring-link_active:hover {
    color: #FFF;
    cursor: default;
    text-decoration: none;
  }
}

.ring-header__menu-service-line {
  background: #1e2a32;
  font-size: $ring-font-size-smaller;
  line-height: $ring-unit*3;
}

.ring-header__menu-service-line__item {
  display: inline-block;
  margin-right: $ring-unit*3;

  &:last-child {
    margin-right: 0;
  }

  .ring-link:hover,
  .ring-link:visited:hover {
    color: $ring-link-hover-color;
    text-decoration: underline;
  }

  .ring-link,
  .ring-link:visited,
  .ring-link_active,
  .ring-link_active:hover {
    color: $ring-dark-gray-color;
    text-decoration: none;
  }

  .ring-link_active,
  .ring-link_active:hover {
    cursor: default;
  }
}

// Customize menu icons
.ring-header__user-menu {
  .ring-icon_expand1 {
    height: 17px;
    width: 17px;
  }

  .ring-icon_help {
    height: 19px;
    width: 19px;
  }
}

